// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fuse renders with an avatar 1`] = `
<div
  className="Fuse"
>
  <img
    alt="John Smith's Avatar"
    className="Fuse-avatar"
    src="http://avatar.com/me.png"
  />
  <article
    className="Fuse-body"
  >
    <header
      className="Fuse-header"
    >
      <div
        className="Fuse-fullName"
      >
        John Smith
      </div>
      <span>
         
      </span>
      <div
        className="Fuse-userName"
      >
        @
        johnsmith
      </div>
      <span>
         — 
      </span>
      <div
        className="Fuse-date"
        title="October 9 2017 7:00 p.m."
      >
        0 seconds
      </div>
    </header>
    <div
      className="Fuse-message"
    >
      Hello World!
    </div>
    <div
      className="FuseActions"
    >
      <button
        className="FuseActions-action"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-comment-o"
        />
      </button>
      <button
        className="FuseActions-action is-active"
      >
        <i
          aria-hidden="true"
          className="fa fa-heart-o"
        />
      </button>
    </div>
  </article>
</div>
`;

exports[`Fuse renders with an email 1`] = `
<div
  className="Fuse"
>
  <img
    alt="John Smith's Avatar"
    className="Fuse-avatar"
    src="http://avatar.com/me.png"
  />
  <article
    className="Fuse-body"
  >
    <header
      className="Fuse-header"
    >
      <div
        className="Fuse-fullName"
      >
        John Smith
      </div>
      <span>
         
      </span>
      <div
        className="Fuse-userName"
      >
        @
        johnsmith
      </div>
      <span>
         — 
      </span>
      <div
        className="Fuse-date"
        title="October 9 2017 2:00 p.m."
      >
        0 seconds
      </div>
    </header>
    <div
      className="Fuse-message"
    >
      Hello World!
    </div>
    <div
      className="FuseActions"
    >
      <button
        className="FuseActions-action"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-comment-o"
        />
      </button>
      <button
        className="FuseActions-action is-active"
      >
        <i
          aria-hidden="true"
          className="fa fa-heart-o"
        />
      </button>
    </div>
  </article>
</div>
`;
